<resources>
    <string name="app_name">SimpleWeather</string>
    <string name="ic_describe">天气图片</string>
    <string name="city_icon">城市图标</string>
    <string name="nonce_city">当前城市</string>
    <string name="city_list">城市列表</string>
    <string name="choose">选项</string>
    <string name="add_city">添加城市</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="welcome_text_11">欢迎使用</string>
    <string name="welcome_text_12">Simple Weather</string>
    <string name="welcome_text_13">- · · ·</string>
    <string name="welcome_text_21">简洁不失个性</string>
    <string name="welcome_text_22">Customization</string>
    <string name="welcome_text_23">· - · ·</string>
    <string name="welcome_text_31">轻巧不失优雅</string>
    <string name="welcome_text_32">Elegance</string>
    <string name="welcome_text_33">· · - ·</string>
    <string name="welcome_text_41">在这里，只有天气</string>
    <string name="welcome_text_42">Only</string>
    <string name="welcome_text_43">· · · -</string>
    <string name="welcome_start">立即体验</string>
    <string name="share_weather">分享天气</string>
    <string name="share_app">分享应用</string>
    <string name="about_app">关于软件</string>
    <string name="about_author">关于作者</string>
    <string name="thank_support">感谢以下开源项目及资源的支持</string>
    <string name="check_welcome">查看欢迎页</string>
    <string name="check_version">检查新版本</string>
    <string name="feed_back">Bug ＆ 建议反馈</string>
    <string name="project_address">项目地址</string>
    <string name="qq_qun">企鹅群</string>
    <string name="thand_2">▶Iconfont-阿里巴巴矢量图标库-http://www.iconfont.cn/</string>
    <string name="thand_3">▶MQC-阿里移动质量中心-https://mqc.aliyun.com/</string>
    <string name="thand_4">▶fir.im-应用内测托管平台-http://fir.im/</string>
    <string name="thand_5">▶BugHD-实时监控APP的崩溃分析工具-http://bughd.com/</string>
    <string name="thand_6">▶麦客-简单好用的表单和联系人管理工具-http://www.mikecrm.com/index.php</string>
    <string name="thand_7">▶中国天气网-http://www.weather.com.cn/</string>
    <string name="thand_8">▶中国万年历-http://www.zhwnl.cn/</string>
</resources>
