<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/welcome_icon_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/about"
        android:src="@mipmap/welcome_1"
        android:tint="@android:color/white"/>

    <TextView
        android:id="@+id/welcome_text_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/welcome_text_11"
        android:textColor="@android:color/white"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/welcome_text_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/welcome_icon_1"
        android:layout_below="@id/welcome_text_11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_text_12"
        android:textColor="@android:color/white"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/welcome_text_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/welcome_text_13"
        android:textColor="@android:color/white"
        android:textSize="30dp"/>

</RelativeLayout>